grab all recently played

--- a/popup.html
+++ b/popup.html
@@ -28,7 +28,7 @@
 
     <div class="main-container" id="main">
         <div class="fetch-container" id="fetch-container">
-            <button id="fetch">Grab recently played users</button>
+            <button id="fetch-coplay">Grab recently played users</button>
             <div class="warning text-center">This will only work if you are logged into steam.</div>
         </div>
         <ul class="links">
@@ -48,5 +48,6 @@
     </div>
     <script src="/js/popup/helpers.js"></script>
     <script src="/js/popup/settings.js"></script>
+    <script src="/js/popup/coplay.js"></script>
 </body>
 </html>
